--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,13 @@
 version: '3.9'
 
 services:
-  db:
-    image: postgres:16
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - .env.dev  
-    ports:
-      - "5432:5432"  
-
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: /entrypoint.sh  # optional, only needed if not already using this
     volumes:
       - .:/code
     ports:
       - "8000:8000"
     env_file:
       - .env.dev
-    depends_on:
-      - db
 
-volumes:
-  postgres_data:
